# template-python

./: .coverage  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cookiecutter.json  coverage.xml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docker.yml
src/change_me/: __main__.py  definitions.py  utils.py
tests/: main_test.py  utils_test.py
{{ cookiecutter.repo_name }}/: .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  pyproject.toml  repo_tree.py
{{ cookiecutter.repo_name }}/.github/workflows/: ci.yml  docker.yml
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.module_name }}/: __main__.py  utils.py
{{ cookiecutter.repo_name }}/tests/: main_test.py
