[project]
name = "change-me"
version = "0.1.1"
description = "A simple Python template"
readme = "README.md"
authors = [{ name = "Tsmorz", email = "tony.smoragiewicz@tum.de" }]
requires-python = ">=3.11,<3.14"

dependencies = [
    "numpy>=2.2.3",
    "loguru>=0.7.3",
]
[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.1.0",
    "coveralls>=4.0.1",
]

[project.urls]
homepage = "https://github.com/TUM-Aries-Lab/template-python"

[tool.ruff]
line-length = 88

lint.select = [
    "E",      # pycodestyle (style errors)
    "F",      # Pyflakes (logical errors)
    "W",      # Warnings
    "C90",    # mccabe (complexity checks)
    "I",      # isort (import sorting)
    "N",      # pep8-naming (naming conventions)
    "D",      # pydocstyle (docstring conventions)
    "UP",     # pyupgrade (Python syntax modernization)
    "B",      # flake8-bugbear (common pitfalls and performance issues)
    "S",      # flake8-bandit (security issues)
    "YTT",    # flake8-2020 (Python 2 compatibility issues)
    "Q",      # flake8-quotes (quote consistency)
    "PL",     # pylint (general best practices)
    "RUF",    # Ruff-specific rules
    "T20",
    "F841",   # unused variable
    "ERA001"  # commented out code
]

lint.ignore = [
    "D203",
    "D213",
    "E501",
    "N803",
    "N806",
    "D415",
    "S101",
    "E203",
    "E731",
    "D107",
    "PLR2004",
    "S607",
    "S605",
    "S603",
]

fix = true

[tool.ruff.lint.isort]
known-first-party = ["change-me"]
combine-as-imports = true

[tool.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -------------------------
#     BUILD SYSTEM
# -------------------------
# UV uses hatchling by default; Poetry build backend removed.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
