[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
requires-python = ">=3.11,<3.14"

dependencies = [
    "numpy>=2.2.3",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pre-commit>=4.1.0",
    "coveralls>=4.0.1",
]

[project.urls]
homepage = "https://github.com/{{ cookiecutter.org_name }}/{{ cookiecutter.repo_name }}"

# -------------------------
#       RUFF (LINT + TYPE CHECK)
# -------------------------
[tool.ruff]
line-length = 88
preview = true                # enables type-checking (Pyright engine)

# Enable lint + type-checking rules
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes (logical errors)
    "W",      # warnings
    "C90",    # mccabe complexity
    "I",      # import sorting (isort)
    "N",      # naming
    "D",      # docstring conventions
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "S",      # flake8-bandit security
    "YTT",    # python2 checks
    "Q",      # quote consistency
    "PL",     # pylint rules
    "RUF",    # ruff rules
    "PYI",    # Pyright type checking rules
    "PY",     # Pyright general type checking
    "T20",
    "F841",   # unused variable
    "ERA001", # commented-out code
]

ignore = [
    "D203",
    "D213",
    "E501",
    "N803",
    "N806",
    "D415",
    "S101",
    "E203",
    "E731",
    "D107",
    "PLR2004",
    "S607",
    "S605",
    "S603",
]

fix = true

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.package_name }}"]
combine-as-imports = true

[tool.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# -------------------------
#     BUILD SYSTEM
# -------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"